[tool.poetry]
name = "research-assistant"
version = "0.1.0"
description = ""
authors = ["joew <joswilson@extremenetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.12.8"
tavily-python = "^0.5.0"
jupyter = "^1.1.1"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
llama-index-embeddings-ollama = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
