[tool.poetry]
name = "research-assistant"
version = "0.1.0"
description = ""
authors = ["joew <joswilson@extremenetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.12.8"
tavily-python = "^0.5.0"
jupyter = "^1.1.1"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
llama-index-embeddings-ollama = "^0.5.0"
llama-index-llms-ollama = "^0.5.0"
llama-index-tools-google = "^0.3.0"
llama-index-tools-tavily-research = "^0.3.0"
diffusers = "^0.31.0"
torch = "^2.5.1"
transformers = "^4.47.1"
accelerate = "^1.2.1"
llama-index-core = "^0.12.8"
llama-index-llms-nvidia = "^0.3.1"
llama-index-embeddings-nvidia = "^0.3.0"
llama-index-utils-workflow = "^0.3.0"
llama-parse = "^0.5.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
